# CppLabs

./: README.md
IvanMurzinLab3/: CMakeLists.txt  ECode.cpp  main.cpp  test.cpp
IvanMurzinLab3/application/: startup.cpp
IvanMurzinLab3/application/controller/: BaseTableController.h  MarksController.h  TableController.h  UsersController.h
IvanMurzinLab3/application/model/: Table.h
IvanMurzinLab3/application/presentation/: Dialog.cpp
IvanMurzinLab3/builder/: ResponseCode.h
IvanMurzinLab3/controller/: TableController.cpp  TableController.h
IvanMurzinLab3/lib/controller/: Dialog.cpp  Dialog.h
IvanMurzinLab3/lib/model/: Action.cpp  Action.h  Scanner.h
IvanMurzinLab3/model/: GoodTable.h  Item.cpp  Item.h  Table.cpp  Table.h
IvanMurzinLab3/test/: CMakeLists.txt  test.cpp
IvanMurzinLab3/utils/: TupleDeserializer.h  TypeTraits.h
externalCode/: main.cpp
externalCode/application/: CMakeLists.txt  startup.cpp
externalCode/application/controller/: MarksController.h  UsersController.h
externalCode/application/model/: Resource.h
externalCode/application/presentation/: Dialog.cpp
externalCode/utils/: TupleDeserializer.h  TupleUnpacker.h
lab1/application/: startup.cpp
lab1/application/controller/: AstroidController.cpp  AstroidController.h
lab1/application/model/: Astroid.cpp  Astroid.h
lab1/application/presentation/: Dialog.cpp
lab1/testes/: CMakeLists.txt  fixes.cpp  test0.cpp
lab2/: CMakeLists.txt
lab2/application/: CMakeLists.txt
lab2/application/controller/: AstroidController.cpp
lab2/application/model/: Astroid.cpp
lab2/application/presentation/: Dialog.cpp
lab2/testes/: CMakeLists.txt  fixes.cpp  test0.cpp
lab3/: CMakeLists.txt
lab3/application/: CMakeLists.txt  startup.cpp
lab3/application/controller/: TerminalController.cpp  TerminalController.h
lab3/application/model/: Vector.h
lab3/application/model/Entities/logicalElement/: LogicalElement.cpp  LogicalElement.h
lab3/application/model/Entities/terminal/: InputTerminal.cpp  InputTerminal.h  OutputTerminal.cpp  OutputTerminal.h  Terminal.cpp  Terminal.h
lab3/application/model/terminal/: Terminal.h
lab3/application/presentation/: Dialog.cpp
lab3/builder/: Builder.h  IController.h
lab3/lib/: uniquePtrAllocator.h
lab3/testes/: CMakeLists.txt  fixes.cpp  test.cpp
